User and Video functionality updates